--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "exceljs",
+  "name": "exceljs2",
   "version": "0.2.15",
-  "description": "Excel Workbook Manager - Read and Write xlsx and csv Files.",
+  "description": "Excel Workbook Manager (forked) - Read and Write xlsx and csv Files.",
   "private": false,
   "license": "MIT",
   "author": {
-    "name": "Guyon Roche",
-    "email": "cyber.sapiens@hotmail.com",
-    "url": "https://github.com/guyonroche/exceljs"
+    "name": "John Ro",
+    "email": "john.ro@outlook.com",
+    "url": "https://github.com/john-ro/exceljs2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/guyonroche/exceljs.git"
+    "url": "https://github.com/john-ro/exceljs2.git"
   },
   "keywords": [
     "xlsx", "json", "csv", "excel", "font", "border", "fill", "number", "format", "number format", "alignment", "office", "spreadsheet", "workbook",
